# ploidy

./: .gitignore  .mcp.json  CLAUDE.md  CONVENTIONS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/commands/: review-pr.md  spike.md
.github/: dependabot.yml
.github/workflows/: ci.yml  maintenance.yml
deploy/: README.md
deploy/kubernetes/: ploidy.yaml
docs/: ARCHITECTURE.md  api-reference.md  directory-submission.md  getting-started.md  how-it-works.md  index.md  paper-draft.md  research.md  session-orchestration.md  templates.md
experiments/: README.md  run_diversity_experiment.py  run_experiment.py  tasks_longcontext.py
experiments/src/: analyze_stats.py  extract_claude_sessions.py  run_diversity_experiment.py  run_experiment.py  task_model.py  tasks_extended.py  tasks_longcontext.py  token_tracker.py
paper/: context-as-lifespan-outline.md  draft-v1.md  draft-v2.md  main.tex  research-program.md
paper/latex/: colm_submission.tex  main.tex  references.bib
paper/paper-1-experimental/: outline.md  references.bib
paper/paper-1-position/: context-as-lifespan-outline.md
paper/paper-2-mechanism/: colm2026_conference.bst  colm2026_conference.sty  colm_submission.bbl  colm_submission.tex  main.bbl  (+5 more)
planning/: decisions.md  oauth-integration.md  research-program.md
tests/: conftest.py  test_convergence.py  test_dashboard.py  test_debate_flow.py  test_history_cli.py  test_http_e2e.py  test_lockprovider.py  test_logctx.py  test_metrics.py  test_oauth_provider.py  test_render.py  test_retention.py  test_server.py
(+47 files in other folders)
