[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diploid"
version = "0.1.0"
description = "Cross-session multi-agent debate MCP server. Same model, different context, better decisions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ren" },
]
keywords = ["mcp", "multi-agent", "debate", "llm", "context-asymmetry"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp",
    "aiosqlite",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
